--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+    <div id="parameters">
+        <label for="gridSize">Size of the grid (between 1x1 and 100x100):</label>
+        <input type="number" id="gridSize" name="gridSize" min="1" max="100" value="16">
+        <input type="submit" id="gridSizeButton" value="Submit">
+    </div>
     <div id="grid"></dic>
 </body>
 
