Correct typing error.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <input type="number" id="gridSize" name="gridSize" min="1" max="100" value="16">
         <input type="submit" id="gridSizeButton" value="Submit">
     </div>
-    <div id="grid"></dic>
+    <div id="grid"></div>
 </body>
 
 </html>
